perbaiki bug pada offline fallback di catch dan manifest short_url

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "Pojok Berbagi Indonesia",
     "short_name": "PBI",
-    "start_url": "",
+    "start_url": "/",
     "display": "standalone",
     "background_color": "#FFFFFF",
     "theme_color": "#FFFFFF",
