--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,9 +1,68 @@
 {
     "name": "Pojok Berbagi Indonesia",
     "short_name": "PBI",
-    "start_url": "/",
+    "theme_color": "#fff",
+    "background_color": "#fff",
     "display": "standalone",
-    "background_color": "#FFFFFF",
-    "theme_color": "#FFFFFF",
-    "orientation": "portrait-primary"
-}
+    "orientation": "portrait",
+    "scope": "/",
+    "start_url": "/",
+    "icons": [
+      {
+        "src": "/assets/images/pwa/icons/icon-72x72.png",
+        "sizes": "72x72",
+        "type": "image/png",
+        "purpose": "maskable"
+      },
+      {
+        "src": "/assets/images/pwa/icons/icon-96x96.png",
+        "sizes": "96x96",
+        "type": "image/png"
+      },
+      {
+        "src": "/assets/images/pwa/icons/icon-128x128.png",
+        "sizes": "128x128",
+        "type": "image/png"
+      },
+      {
+        "src": "/assets/images/pwa/icons/icon-144x144.png",
+        "sizes": "144x144",
+        "type": "image/png"
+      },
+      {
+        "src": "/assets/images/pwa/icons/icon-152x152.png",
+        "sizes": "152x152",
+        "type": "image/png"
+      },
+      {
+        "src": "/assets/images/pwa/icons/icon-192x192.png",
+        "sizes": "192x192",
+        "type": "image/png"
+      },
+      {
+        "src": "/assets/images/pwa/icons/icon-384x384.png",
+        "sizes": "384x384",
+        "type": "image/png"
+      },
+      {
+        "src": "/assets/images/pwa/icons/icon-512x512.png",
+        "sizes": "512x512",
+        "type": "image/png"
+      }
+    ],
+    "screenshots": [
+      {
+        "src": "/assets/images/pwa/small.png",
+        "type": "image/png",
+        "sizes": "540x770",
+        "form_factor": "narrow"
+      },
+      {
+        "src": "/assets/images/pwa/wide.png",
+        "type": "image/png",
+        "sizes": "770x540",
+        "form_factor": "wide"
+      }
+    ],
+    "description": "Tempat bagi gerakan kebaikan (social movement) dan kemanusiaan."
+  }
